--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+### react ###
+.DS_*
+.log
+logs
+**/.backup.*
+*/.back.*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
+bower_components
 
-# testing
-/coverage
+.sublime
 
-# production
-/build
+psd
+thumb
+sketch
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# Support for Project snippet scope
+.vscode/.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
