--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_APP_ID=1:413638102450:web:9db15b77280272fed968ab
 REACT_APP_MEASUREMENT_ID=G-LW3WR80V3E
 
 # BASE_API_URL
+REACT_APP_BASE_API_URL=https://16de-118-69-233-167.ap.ngrok.io
