--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ REACT_APP_APP_ID=1:413638102450:web:9db15b77280272fed968ab
 REACT_APP_MEASUREMENT_ID=G-LW3WR80V3E
 
 # BASE_API_URL
-REACT_APP_BASE_API_URL=https://14ce-27-71-108-181.ap.ngrok.io
+REACT_APP_BASE_API_URL=https://we-hr-system.herokuapp.com
