--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
