--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.7",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
